2008-09-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac:
	* src/Makefile.am:
	* src/home.conf.in:
	* src/home.plugins.in: Add configuration files for the the home applet
	plugin manager.

	* debian/hildon-home.install: Install the new configuration files.

	* src/hildon-home.c (home_plugin_added, home_plugin_removed, main):
	Add support for the home applet plugins.

2008-09-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Require libhildondesktop >= 2.1.4.

	* src/hildon-home.c (signal_handler): Use hd_stamp_file_finalize
	function.
	(main): Use hd_stamp_file_init function.

2008-09-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* autogen.sh:
	* AUTHORS:
	* COPYING:
	* INSTALL:
	* NEWS:
	* README:
	* Makefile.am:
	* configure.ac:
	* src/Makefile.am: Add files required by automake.

	* src/hildon-home.c: Add hildon-home application. Implement
	notifications.

	* src/hd-notification-manager.c:
	* src/hd-notification-manager.h:
	* src/notification-manager.xml: Add support for
	org.freedesktop.Notifications D-Bus API. Based on diablo
	hildon-desktop code. Add support for notification plugins.

	* src/notification.conf.in: Add configuration for notification
	plugins.

	* debian/changelog:
	* debian/control:
	* debian/hildon-home.install:
	* debian/rules: Add debian package files.
